--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -77,6 +77,23 @@ body {
     @apply flex items-center justify-center min-h-screen;
   }
   h2 {
-    @apply xl:text-9xl lg:text-8xl text-6xl font-bold;
+    @apply xl:text-9xl lg:text-8xl text-6xl font-bold text-primary animation-in;
+  }
+}
+
+@layer utilities {
+  .animation-in {
+    animation: fade-in 0.5s ease-in-out;
+  }
+
+  @keyframes fade-in {
+    from {
+      opacity: 0;
+      transform: translateY(5%);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
 }
