refactor: 인트로 페이지 스타일 모듈화

--- a/client/src/app/home-component/LeftBox.module.css
+++ b/client/src/app/home-component/LeftBox.module.css
@@ -1,3 +1,7 @@
+.homeParagraph {
+  @apply w-full;
+}
+
 .homeParagraph h2 {
-  @apply xl:text-9xl lg:text-8xl text-6xl font-bold text-primary animation-in;
+  @apply xl:text-9xl lg:text-8xl text-6xl font-bold text-primary;
 }
